@@ -3,42 +3,53 @@
 namespace dhope0000\LXDClient\Tools\Storage;
 
 use dhope0000\LXDClient\Model\Client\LxdClient;
-use dhope0000\LXDClient\Model\Hosts\HostList;
+use dhope0000\LXDClient\Tools\Hosts\GetClustersAndStandaloneHosts;
 
 class GetHostsStorage
 {
-    public function __construct(HostList $hostList, LxdClient $lxdClient)
-    {
-        $this->hostList = $hostList;
+    public function __construct(
+        GetClustersAndStandaloneHosts $getClustersAndStandaloneHosts,
+        LxdClient $lxdClient
+    ) {
+        $this->getClustersAndStandaloneHosts = $getClustersAndStandaloneHosts;
         $this->lxdClient = $lxdClient;
     }
 
     public function getAll()
     {
-        $details = array();
-        foreach ($this->hostList->getHostListWithDetails() as $host) {
-            $indent = is_null($host["Host_Alias"]) ? $host["Host_Url_And_Port"] : $host["Host_Alias"];
-            $details[$indent] = [
-                "online"=>(bool) $host["Host_Online"],
-                "pools"=>[]
-            ];
-            if ($host["Host_Online"] != true) {
-                continue;
-            }
-            $client = $this->lxdClient->getANewClient($host["Host_ID"]);
-            $pools = $client->storage->all();
-            $withResources = [];
-            foreach($pools as $pool){
-                $withResources[] = [
-                    "name"=>$pool,
-                    "resources"=>$client->storage->resources->info($pool)
-                ];
-            }
+        $clusters = $this->getClustersAndStandaloneHosts->get();
 
-
-            $details[$indent]["hostId"] = $host["Host_ID"];
-            $details[$indent]["pools"] = $withResources;
+        foreach ($clusters["clusters"] as $clusterIndex => $cluster) {
+            foreach ($cluster["members"] as $hostIndex => $host) {
+                $clusters["clusters"][$clusterIndex]["members"][$hostIndex]["pools"] = $this->getHostPools($host);
+            }
         }
-        return $details;
+
+        foreach ($clusters["standalone"]["members"] as $hostIndex => $host) {
+            $clusters["standalone"]["members"][$hostIndex]["pools"] = $this->getHostPools($host);
+        }
+
+        return $clusters;
+    }
+
+    private function getHostPools(array $host)
+    {
+        $indent = is_null($host["alias"]) ? $host["urlAndPort"] : $host["alias"];
+
+        if (isset($host["hostOnline"]) && $host["hostOnline"] != true) {
+            return [];
+        }
+
+        $client = $this->lxdClient->getANewClient($host["hostId"]);
+        $pools = $client->storage->all();
+        $withResources = [];
+        foreach ($pools as $pool) {
+            $withResources[] = [
+                "name"=>$pool,
+                "resources"=>$client->storage->resources->info($pool)
+            ];
+        }
+
+        return $withResources;
     }
 }
